fix(front): 注销功能404 (close #78)

--- a/web/index-dev.html
+++ b/web/index-dev.html
@@ -17,6 +17,7 @@
                 const AJAX_URL_PREFIX = 'http://paas.ee225.bktencent.com/t/bk_gsekit/'
                 const LOGIN_SERVICE_URL = 'http://paas.ee225.bktencent.com/login/'
                 const CMDB_URL = 'https://magicbox.bk.tencent.com/static_api/v3/main/index.html'
+                const LOGIN_URL = ''
 
                 // BK_STATIC_URL 不能以 / 结尾
                 if (BK_STATIC_URL.endsWith('/')) {
@@ -35,7 +36,8 @@
                     BK_STATIC_URL: BK_STATIC_URL,
                     AJAX_URL_PREFIX: AJAX_URL_PREFIX,
                     LOGIN_SERVICE_URL: LOGIN_SERVICE_URL,
-                    CMDB_URL: CMDB_URL
+                    CMDB_URL: CMDB_URL,
+                    LOGIN_URL: LOGIN_URL
                 }
             })()
         </script>
