feature: 应用名称话术统一 (closed #202 closed #204)

--- a/web/index-dev.html
+++ b/web/index-dev.html
@@ -18,6 +18,7 @@
                 const LOGIN_SERVICE_URL = 'http://paas.ee225.bktencent.com/login/'
                 const CMDB_URL = 'https://magicbox.bk.tencent.com/static_api/v3/main/index.html'
                 const LOGIN_URL = ''
+                const APP_NAME = '进程配置管理'
 
                 // BK_STATIC_URL 不能以 / 结尾
                 if (BK_STATIC_URL.endsWith('/')) {
@@ -37,7 +38,8 @@
                     AJAX_URL_PREFIX: AJAX_URL_PREFIX,
                     LOGIN_SERVICE_URL: LOGIN_SERVICE_URL,
                     CMDB_URL: CMDB_URL,
-                    LOGIN_URL: LOGIN_URL
+                    LOGIN_URL: LOGIN_URL,
+                    APP_NAME: APP_NAME
                 }
             })()
         </script>
