--- a/web/index-dev.html
+++ b/web/index-dev.html
@@ -19,6 +19,7 @@
                 const CMDB_URL = 'https://magicbox.bk.tencent.com/static_api/v3/main/index.html'
                 const LOGIN_URL = ''
                 const APP_NAME = '进程配置管理'
+                const BKAPP_DOCS_URL = 'https://bk.tencent.com/docs/document/7.0/232/30348'
 
                 // BK_STATIC_URL 不能以 / 结尾
                 if (BK_STATIC_URL.endsWith('/')) {
@@ -39,7 +40,8 @@
                     LOGIN_SERVICE_URL: LOGIN_SERVICE_URL,
                     CMDB_URL: CMDB_URL,
                     LOGIN_URL: LOGIN_URL,
-                    APP_NAME: APP_NAME
+                    APP_NAME: APP_NAME,
+                    BKAPP_DOCS_URL: BKAPP_DOCS_URL
                 }
             })()
         </script>
