--- a/web/index-dev.html
+++ b/web/index-dev.html
@@ -20,6 +20,11 @@
                 const LOGIN_URL = ''
                 const APP_NAME = '进程配置管理'
                 const BKAPP_DOCS_URL = 'https://bk.tencent.com/docs/document/7.0/232/30348'
+                const BKAPP_NAV_HELPER_URL = ''
+                const BKAPP_RUN_ENV = ''
+                const DESTOP_URL = ''
+                const BK_DOCS_CENTER_URL = ''
+                const BKAPP_NAV_OPEN_SOURCE_URL = ''
 
                 // BK_STATIC_URL 不能以 / 结尾
                 if (BK_STATIC_URL.endsWith('/')) {
@@ -41,7 +46,12 @@
                     CMDB_URL: CMDB_URL,
                     LOGIN_URL: LOGIN_URL,
                     APP_NAME: APP_NAME,
-                    BKAPP_DOCS_URL: BKAPP_DOCS_URL
+                    BKAPP_DOCS_URL: BKAPP_DOCS_URL,
+                    BKAPP_NAV_HELPER_URL,
+                    BKAPP_RUN_ENV,
+                    DESTOP_URL,
+                    BK_DOCS_CENTER_URL,
+                    BKAPP_NAV_OPEN_SOURCE_URL,
                 }
             })()
         </script>
